# deeporigin-client

./: .commitlintrc.json  .gitignore  404.html  ARCHITECTURE.md  Cas9m4.dna  LICENSE.txt  MANIFEST.in  Makefile  README.md  build_docs.sh  changelog.html  configure.html  conftest.py  index.html  install.html  local database.csv  mkdocs.yaml  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml  sonar-project.properties  untitled.yaml
.cursor/rules/: python.mdc
.github/: CODEOWNERS
.github/workflows/: docs.yaml  docs.yml  live_tests.yaml  live_tests_functions.yaml  main.yml  pypi.yml  test_docs.yaml  test_platform_api.yml  test_tools_api.yml  test_ufa.yaml
compute-hub/: index.html
compute-hub/how-to/: variables.html  workstation-info.html
data-hub/: dataframes.html  index.html
data-hub/how-to/: add-data.html  create.html  delete.html  download-files.html  list-data.html  upload-files.html  view-data.html  write-data.html
data-hub/ref/: high-level-api.html  low-level-api.html  types.html
dd/how-to/: complex.html  crystal-ligand.html  docking.html  filter-docking-outputs.html  find-pockets.html  job-docking.html  job.html  ligands.html  prepare-protein.html  protein.html  proteins.html  use-docking-outputs-for-fep.html  visualize-abfe-trajectories.html  visualize.html
dd/ref/: abfe.html  chemistry.html  complex.html  docking.html  drug-discovery.html  ligand.html  ligandset.html  pocket.html  protein.html  rbfe.html  structures.html
dd/tutorial/: abfe.html  docking.html  getting-started.html  rbfe.html
dev/: clients.html  install.html
docs/: CNAME  changelog.md  configure.md  index.md  install.md  install.sh  overview.md  staging-install.sh  staging.yml
docs/compute-hub/: index.md
docs/data-hub/: dataframes.md  index.md
docs/dev/: clients.md  install.md  job-widget.md
docs/extras/: extra.js
docs/how-to/: auth.md  config-package.md  config.md  do-info.md  variables.md  workstation-info.md
docs/images/: 1eby-docked-poses.html  1eby.html  5QSP-lm.html  5QSP.html  brd-3d.html  brd-ligands.html  network.html  serotonin.html
docs/platform/: index.md
docs/stylesheets/: extra.css
docs/tools/: draco.md  index.md  ligand-prep-meeko.md  pdb-to-pdbqt.md  pdbfixer.md  utils.md  vina.md
fep-payloads/: abfe.py  emeq.py  mdsuite-prep-complex.py  mdsuite-prep-ligand.py  solvation.py
how-to/: auth.html  config-package.html  config.html  do-info.html  variables.html  workstation-info.html
how-to/compute-hub/: variables.html  workstation-info.html
how-to/data-hub/: add-data.html  create.html  delete.html  download-files.html  inspect-data.html  list-data.html  upload-data.html  upload-files.html  view-data.html  write-data.html
how-to/managed-data/: explore-data.html  fetch-data.html  inspect-data.html  list-data.html  upload-data.html  write-data.html
how-to/platform/: user-info.html  workstation-info.html
how-to/tools/: check-status.html  list-tools.html  run-tools.html  wait-for-run.html
images/: brd-protein.html
notebooks/: abfe.py  docking.html  docking.py  jobs.py  ligand.py  protein.py
platform/: index.html
platform/compute-hub/: index.html
platform/how-to/: user-info.html  workstation-info.html
platform/ref/: files.html  platform.html  tools.html
ref/data-hub/: high-level-api.html  low-level-api.html  types.html
ref/managed-data/: high-level-api.html  low-level-api.html  low-level-schema.html  types.html
scripts/: .openapi-python-client.yml  build_docs.sh  gen_file_service.sh  refresh_tokens.py
search/: search_index.json
src/: __init__.py  auth.py  chemistry.py  context.py  do_api.py  drug_discovery.py  exceptions.py  feature_flags.py  plots.py  utils.py  warnings.py
src/_data_api/: _base_client.py  _client.py  _compat.py  _constants.py  _exceptions.py  _files.py  _models.py  _resource.py  _streaming.py
src/cli/: __init__.py  auth.py  config.py  context.py  dashboard.py  data.py  variables.py
src/config/: __init__.py  default.yml
src/data_api/: __init__.py  _base_client.py  _client.py  _exceptions.py  _response.py  _streaming.py  _types.py  _version.py
src/data_hub/: _api.py  api.py  axes_callback.js  button_callback.js  callback.js  dataframe.py  filters.py  hover_callback.js  lasso_callback.js  plotting.py
src/deeporigin/: README.md  auth.py  context.py  feature_flags.py  warnings.py
src/drug_discovery/: __init__.py  abfe.py  align.py  chemistry.py  complex.py  constants.py  docking.py  ligand_alignment.py  rbfe.py  structures.py  utils.py  workflow_step.py
src/files/: __init__.py  files_client.py
src/functions/: docking.py  kartograf.py  loop_modelling.py  molprops.py  parallel.py  pocket_finder.py  protonation.py  rbfe_tools.py  sysprep.py
src/json/: abfe.json  abfe_end_to_end.json  binding_fep_simple.json  complex_prep.json  emeq.json  end_to_end.json  rbfe_end_to_end.json  simple_md.json
src/managed_data/: __init__.py  _api.py  api.py  api2.py  client.py  schema.py
src/platform/: __init__.py  admin.py  admin_api.py  api.py  clusters.py  clusters_api.py  entities_api.py  file_api.py  files.py  files_api.py  organizations.py  recording.py  tools.py  tools_api.py  users.py  users_api.py  utils.py  (+4 more)
stylesheets/: extra.css
tests/: api_tokens  check-dangerous-index.sh  config.yml  files_manual_test_remote.py  mock_client.py  test_abfe.py  test_chemistry.py  test_cli.py  test_cli_config.py  test_cli_data.py  test_complex.py  test_config.py  test_context.py  test_data_hub.py  test_dataframe.py  test_dataframe_kitchen_sink.py  test_dd_utils.py  test_feature_flags.py  test_fep.py  test_file_api.py  test_files_client.py  test_filters.py  test_functions.py  test_get_routes.py  test_job_watch.py  test_job_widget.py  test_ligand.py  test_ligand_set.py  test_low_level.py  test_managed_data.py  test_parallel.py  test_platform_client_env.py  test_plots.py  test_pocket.py  test_pocket_finder.py  test_protein.py  test_rbfe.py  test_structures.py  test_tools_api.py  test_types.py  (+4 more)
tools/: draco.html  index.html  ligand-prep-meeko.html  pdb-to-pdbqt.html  pdbfixer.html  run.html  utils.html  vina.html
(+428 files in other folders)
