[project]
name = "deeporigin"
description = "Command line tool and Python client for working with Deep Origin"
authors = [
    {name = "Deep Origin", email = "support@deeporigin.com"},
]
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "cement >= 3",
    "confuse",
    "pydantic >= 2.5.0",
    "python-crontab",
    "python-dotenv",
    "pyyaml",
    "requests",
    "termcolor",
    "validators",
    "pandas",
    "beartype",
    "tabulate",
    "filetype",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "parameterized",
    "coverage",
    "interrogate",
]
jupyter = ["ipykernel","jupyter-black"]

docs = ["mkdocs", 
    "mkdocs-material-extensions", 
    "mkdocs-material", 
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-git-revision-date-localized-plugin",
    "black"
]

[tool.setuptools]
package-dir = {"deeporigin" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
version = {file = ["src/VERSION"]}

[project.scripts]
deeporigin = "deeporigin.cli:main"

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"


[tool.ruff]
include = [
    "**/src/**/*.py",
    "**/tests/**/*.py",
]



[tool.ruff.lint]
ignore = ["E203", "E266", "E501"]



[tool.ruff.lint.isort]
case-sensitive = true

[tool.distutils.bdist_wheel]
universal = true

[tool.coverage.run]
omit = [
    "src/managed_data/client.py"
]


[tool.interrogate]
fail-under = 100
exclude = ["setup.py", "docs", "build","tests","variables","conftest.py"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
color = true